<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/googleplus"
        android:layout_marginBottom="38dp"
        android:text="@string/skip"/>

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/appname"
        android:layout_alignTop="@+id/twitter"
        android:contentDescription="@string/facebook"
        android:src="@drawable/facebook_button"/>

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twitter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/sign_in"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/googleplus"
        android:layout_width="80dip"
        android:layout_height="65dip"
        android:layout_alignBottom="@+id/twitter"
        android:layout_alignRight="@+id/appname"
        android:layout_alignTop="@+id/twitter"
        android:contentDescription="@string/googleplus"
        android:src="@drawable/google_button" />

    <ImageView
        android:id="@+id/appname"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/appname" />

    <ImageView
        android:id="@+id/twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signin"
        android:layout_below="@+id/appname"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/twitter"
        android:src="@drawable/twitter_button" />

</RelativeLayout>
